test/static/wrong/shadow3.kk
// shadow parameter
function id(x,x) -> x
